# Colecci-n-de-Ejercicios-STL

./: CMakeLists.txt  README.md  main.cpp
Ejercicio 1/: Ejercicio1.cpp  Ejercicio1.h
Ejercicio 2/: Circulo.cpp  Circulo.h  Ejercicio2.cpp  Ejercicio2.h  Triangulo.cpp  Triangulo.h
Ejercicio 3/: Ejercicio3.cpp  Ejercicio3.h
Ejercicio 4/: Ejercicio4.cpp  Ejercicio4.h
Ejercicio 5/: Ejercicio5.cpp  Ejercicio5.h
